syntax = "proto3";

package user;

option go_package = "myapp/internal/proto";

service UserService {
    rpc GetUser (UserRequest) returns (UserResponse);
}

message UserRequest {
    string id = 1;
}

message UserResponse {
    string id = 1;
    string name = 2;
}
